<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.cjwillis.dreammap.MainActivity">

    <!--<TextView android:text="@string/hello_world"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/textView" />-->

    <Button
        android:id="@+id/home_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/tokyo_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/home_map_button"
        android:text="@string/tokyo_button_text" />

    <Button
        android:id="@+id/toronto_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tokyo_map_button"
        android:text="@string/toronto_button_text"/>

    <Button
        android:id="@+id/paris_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_map_button"
        android:text="@string/paris_button_text"/>

    <Button
        android:id="@+id/new_york_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tokyo_map_button"
        android:layout_toRightOf="@id/paris_map_button"
        android:text="@string/new_york_button_text"/>

    <Button
        android:id="@+id/london_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toronto_map_button"
        android:layout_toRightOf="@id/new_york_map_button"
        android:text="@string/london_button_text"/>
</RelativeLayout>
